Improve tests and so on.